# zoobot-predictions

./: .gitignore  README.md  conda.yaml  pyproject.toml  temp.ipynb  test_model_loading.ipynb  test_representations.ipynb  test_representations_karina.ipynb
conf/: default.yaml
conf/aggregation/: desi.yaml  euclid_wide.yaml  example.yaml  hsc.yaml  local_debug.yaml  representations.yaml
conf/cluster/: beluga.yaml  datalabs_l4.yaml  local_debug.yaml  local_gpu.yaml  manchester.yaml
conf/galaxies/: desi.yaml  desi_jpg.yaml  desi_wds.yaml  euclid_karina_jpg.yaml  euclid_q1.yaml  euclid_wide.yaml  example.yaml  example_jpg.yaml  example_wds.yaml  hsc.yaml  hsc_local_debug.yaml  hsc_pdr3.yaml  sga2020.yaml
conf/model/: convnext_base_evo.yaml  convnext_nano_euclid.yaml  convnext_nano_evo.yaml  convnext_nano_evo_v2_then_euclid.yaml  effnet_desi.yaml  effnet_rings_dirichlet.yaml  maxvit_rings_dirichlet.yaml  maxvit_tiny_desi_wds.yaml  maxvit_tiny_evo.yaml  resnet_rings_binary.yaml  resnet_rings_dirichlet.yaml
evaluation_utils/: compare_models.py  decals_deprecated.py  evaluate_model.py
example/: make_snippets.py
make_predictions/: a_make_bulk_catalog_predictions.py  a_make_bulk_catalog_predictions.sh  b_alt_tidy.py  b_group_hdf5_from_a_model.py  b_group_hdf5_from_a_model.sh  c_group_hdf5_across_models.py  d_all_predictions_to_friendly_table.py  model_utils.py  representations_from_huggingface.py  sense_check_desi_uncertainties.ipynb  sense_check_gzcd_uncertainties.ipynb  utils.py  validation_utils.py
validation/: test_model_loading.ipynb
(+41 files in other folders)
