[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
# [tool.setuptools]
# package-dir = {"" = "zoobot_predictions"}

[project]
name = "zoobot-predictions"
version = "0.0.1"
dependencies = [
]
requires-python = ">=3.10"
authors = [
  {name = "Mike Walmsley"},
]
description = "Zoobot predictions"
readme = "README.rst"
license = "MIT"
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]


[project.urls]
    Homepage = "https://www.github.com/mwalmsley/zoobot-predictions"